--- a/.eslintrc
+++ b/.eslintrc
@@ -3,15 +3,7 @@
     "airbnb-base"
   ],
   "rules": {
-    "no-underscore-dangle": ["error", { "allow": ["_id"] }]
-  },
-  "import/extensions": [
-    "error",
-    "always",
-    {
-      "js": "never",
-      "jsx": "never",
-      "mjs": "never"
-    }
-  ]
+    "no-underscore-dangle": ["error", { "allow": ["_id"] }],
+    "import/extensions": "off"
+  }
 }
